--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h2 {
 }
   svg {
 
-    background: url("http://vignette2.wikia.nocookie.net/marios-five-nights/images/1/17/Static.gif/revision/latest?cb=20150602181650");
+    background: url("http://i.dailymail.co.uk/i/pix/2012/06/25/article-0-13C76BA5000005DC-387_964x639.jpg");
   background-size: 100%;
   background-position: 0px -20px;
   display: block;
