--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
 
 body {
- background-image: url("");
+ background-image: url("http://www.powerpointhintergrund.com/uploads/yellow-background-18.jpg");
   min-width: 650px;
 }
 
